# opengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
lib/glad/: glad.c
lib/glfw/: CMakeLists.txt
res/shader/: base.glsl
src/: Application.cpp  GLManager.cpp  GLManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  main.cpp
